# GPOHound

./: .gitignore  CONFIG.md  README.md  customqueries.json  pyproject.toml  setup.py
config/: gpo_files.yaml  neo4j.yaml  well_known_groups.yaml
config/analysis/: group.yaml  privilege_rights.yaml  registry.yaml
config/gpo_files_structure/aas/: aas.yaml
config/gpo_files_structure/csv/: audit.yaml
config/gpo_files_structure/inf/: cap.yaml  gpttmpl.yaml
config/gpo_files_structure/ini/: gpt.yaml
config/gpo_files_structure/pol/: registry.yaml
config/gpo_files_structure/xml/: DataSources.yaml  Devices.yaml  Drives.yaml  EnvironmentVariables.yaml  Files.yaml  FolderOptions.yaml  Folders.yaml  Groups.yaml  IniFiles.yaml  InternetSettings.yaml  NTServices.yaml  NetworkOptions.yaml  NetworkShareSettings.yaml  PowerOptions.yaml  Printers.yaml  Regional.yaml  RegistrySettings.yaml  ScheduledTasks.yaml  Shortcuts.yaml  StartMenuTaskbar.yaml
example/north.sevenkingdoms.local/Policies/{276AA65B-86AE-4557-8858-3BC1B2C0B384}/: GPT.INI
example/north.sevenkingdoms.local/Policies/{A98BEB12-AE4E-41C5-8F81-C9E318EB5338}/: GPT.INI
gpohound/: __init__.py  __main__.py  analyser.py  core.py  enricher.py  parser.py  processor.py
gpohound/analysers/: groups.py  privilege_rights.py  registry.py
gpohound/parsers/: aas_files.py  csv_files.py  inf_files.py  ini_files.py  pol_files.py  xml_files.py
gpohound/processors/: group_membership.py  pol_registry.py  privilege_rights.py  registry_values.py  xml_groups.py  xml_registry.py
gpohound/utils/: ad.py  bloodhound.py  utils.py
(+24 files in other folders)
