[project]
name = "gpohound"
version = "1.0.0"
description = "GPO dumper and analyser"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Maxime AWOUKOU" }
]
dependencies = [
    "pyyaml>=6.0.2",
    "neo4j>=5.28.1",
    "rich>=14.0.0",
    "pycryptodome>=3.22.0",
    "platformdirs>=4.3.7",
]

[project.urls]
Homepage = "https://github.com/cogiceo/GPOHound"
Repository = "https://github.com/cogiceo/GPOHound"

[project.scripts]
gpohound = "gpohound:main"

[tool.poetry]
exclude = []
include = [{ path = "config/**/*.yaml", format = ["sdist", "wheel"] }]
packages = [{ include = "gpohound" }]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"